--- a/About.html
+++ b/About.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./Styles/nicepage.css" media="screen">
 <link rel="stylesheet" href="./Styles/About.css" media="screen">
     <script class="u-script" type="text/javascript" src="./Scripts/jquery.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="./Scripts/nicepage.js]" defer=""></script>
+    <script class="u-script" type="text/javascript" src="./Scripts/nicepage.js" defer=""></script>
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Bai+Jamjuree:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.0/css/font-awesome.min.css">
