Formated html files and redirected to index

--- a/Industries.html
+++ b/Industries.html
@@ -33,7 +33,7 @@
 <body class="u-body">
   <header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-dd13">
     <div class="u-clearfix u-sheet u-sheet-1">
-      <a href="Home.html#carousel_13fe" data-page-id="2206810918"
+      <a href="index.html#carousel_13fe" data-page-id="2206810918"
         class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-1">CONTACT US</a>
       <nav class="u-align-left u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="MD">
         <div class="menu-collapse"
@@ -73,7 +73,7 @@
           <ul class="u-nav u-spacing-30 u-unstyled u-nav-1">
             <li class="u-nav-item"><a
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
-                href="Home.html" style="padding: 10px 0px;">Home</a>
+                href="index.html" style="padding: 10px 0px;">Home</a>
             </li>
             <li class="u-nav-item"><a
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
@@ -108,10 +108,10 @@
                   </li>
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
                       data-page-id="976527205">Financial Sector</a>
-                    </li>
-                    <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
-                        data-page-id="976527205">Logistics</a>
-                    </li>
+                  </li>
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
+                      data-page-id="976527205">Logistics</a>
+                  </li>
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Industries.html#sec-ac3a"
                       data-page-id="976527205">Manufacturing</a>
                   </li>
@@ -153,7 +153,7 @@
             <div class="u-inner-container-layout u-sidenav-overflow">
               <div class="u-menu-close"></div>
               <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-6">
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html"
+                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html"
                     style="padding: 10px 0px;">Home</a>
                 </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html"
@@ -258,8 +258,8 @@
               href="#link-tab-6219" role="tab" aria-controls="link-tab-6219" aria-selected="false">Logistics</a>
           </li>
           <li class="u-tab-item" role="presentation">
-            <a class="u-active-palette-2-base u-button-style u-tab-link u-tab-link-6" id="link-tab-f599" href="#tab-f599" role="tab" aria-controls="tab-f599"
-              aria-selected="false">Manufacturing</a>
+            <a class="u-active-palette-2-base u-button-style u-tab-link u-tab-link-6" id="link-tab-f599"
+              href="#tab-f599" role="tab" aria-controls="tab-f599" aria-selected="false">Manufacturing</a>
           </li>
         </ul>
         <div class="u-tab-content">
