--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
   <meta property="og:type" content="website">
 </head>
 
-<body data-home-page="Home.html" data-home-page-title="Home" class="u-body">
+<body data-home-page="index.html" data-home-page-title="Home" class="u-body">
   <header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-dd13">
     <div class="u-clearfix u-sheet u-sheet-1">
-      <a href="Home.html#carousel_13fe" data-page-id="2206810918"
-        class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-1 responsiveContactusPosition ">CONTACT US</a>
+      <a href="index.html#carousel_13fe" data-page-id="2206810918"
+        class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-1 responsiveContactusPosition ">CONTACT
+        US</a>
       <nav class="u-align-left u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="MD">
-        <div class="menu-collapse responsiveHamburgerPosition"  
+        <div class="menu-collapse responsiveHamburgerPosition"
           style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
           <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link"
             href="#">
@@ -75,11 +76,11 @@
         </div>
         <div class="u-custom-menu u-nav-container">
           <ul class="u-nav u-spacing-30 u-unstyled u-nav-1">
-            <li class="u-nav-item "><a   
+            <li class="u-nav-item "><a
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
-                href="Home.html" style="padding: 10px 0px;">Home</a>
+                href="index.html" style="padding: 10px 0px;">Home</a>
             </li>
-            <li class="u-nav-item "><a  
+            <li class="u-nav-item "><a
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="About.html" style="padding: 10px 0px;">About</a>
               <div class="u-nav-popup">
@@ -96,7 +97,7 @@
                 </ul>
               </div>
             </li>
-            <li class="u-nav-item "><a  
+            <li class="u-nav-item "><a
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="Industries.html" style="padding: 10px 0px;">Industries</a>
               <div class="u-nav-popup">
@@ -122,7 +123,7 @@
                 </ul>
               </div>
             </li>
-            <li class="u-nav-item "><a  
+            <li class="u-nav-item "><a
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="Services.html" style="padding: 10px 0px;">Services</a>
               <div class="u-nav-popup">
@@ -138,7 +139,7 @@
                 </ul>
               </div>
             </li>
-            <li class="u-nav-item "><a  
+            <li class="u-nav-item "><a
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="Support.html" style="padding: 10px 0px;">Support</a>
               <div class="u-nav-popup">
@@ -157,7 +158,7 @@
             <div class="u-inner-container-layout u-sidenav-overflow">
               <div class="u-menu-close"></div>
               <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-6">
-                <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Home.html"
+                <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="index.html"
                     style="padding: 10px 0px;">Home</a>
                 </li>
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="About.html"
@@ -265,7 +266,7 @@
                       how we might help you accelerate change.<br>
                       <br><b>Duis aute irure dolor in reprehenderit</b>
                     </p>
-                    <a href="Home.html#carousel_64ac" data-page-id="2206810918"
+                    <a href="index.html#carousel_64ac" data-page-id="2206810918"
                       class="u-border-none u-btn u-btn-round u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-palette-1-base u-radius-50 u-btn-1">Learn
                       more</a>
                   </div>
