--- a/Support.html
+++ b/Support.html
@@ -8,10 +8,11 @@
   <meta name="description" content="">
   <meta name="page_type" content="np-template-header-footer-from-plugin">
   <title>Support</title>
-  <link rel="stylesheet" href="./Styles/nicepage.css" media="screen">
+  <link rel="stylesheet" href="./CSS-libraries/nicepage.css" media="screen">
   <link rel="stylesheet" href="./Styles/Support.css" media="screen">
-  <script class="u-script" type="text/javascript" src="./Scripts/jquery.js" defer=""></script>
-  <script class="u-script" type="text/javascript" src="./Scripts/nicepage.js" defer=""></script>
+  <link rel="stylesheet" href="./Styles/Global.css">
+  <script class="u-script" type="text/javascript" src="./JS-libraries/jquery-min.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="./JS-libraries/nicepage-min.js" defer=""></script>
   <link id="u-theme-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Bai+Jamjuree:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i">
 
