--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
   <meta name="description" content="">
   <meta name="page_type" content="np-template-header-footer-from-plugin">
   <title> New Improved Home</title>
-  <link rel="stylesheet" href="./Styles/nicepage.css" media="screen">
+  <link rel="stylesheet" href="./CSS-libraries/nicepage.css" media="screen">
   <link rel="stylesheet" href="./Styles/Home.css" media="screen">
+  <link rel="stylesheet" href="./Styles/Global.css">
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.0/css/font-awesome.min.css">
-  <script class="u-script" type="text/javascript" src="./Scripts/jquery.js" defer=""></script>
-  <script class="u-script" type="text/javascript" src="./Scripts/nicepage.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="./JS-libraries/jquery-min.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="./JS-libraries/nicepage-min.js" defer=""></script>
   <link id="u-theme-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Bai+Jamjuree:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i">
   <link id="u-page-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Bai+Jamjuree:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i">
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://salesportal.aptaracorp.com/PPDI/POC/js/geometry/geometryangle.js"></script>
+    <script src="./Scripts/geometryangle.js"></script>
 
   <script type="application/ld+json">{
 		"@context": "http://schema.org",
