--- a/About.html
+++ b/About.html
@@ -38,9 +38,9 @@
   <header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-dd13">
     <div class="u-clearfix u-sheet u-sheet-1">
       <a href="index.html#carousel_13fe" data-page-id="2206810918"
-        class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-1">CONTACT US</a>
+        class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-1 responsiveContactusPosition">CONTACT US</a>
       <nav class="u-align-left u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="MD">
-        <div class="menu-collapse"
+        <div class="menu-collapse responsiveHamburgerPosition"
           style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
           <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link"
             href="#">
@@ -176,7 +176,7 @@
                     </ul>
                   </div>
                 </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html"
+                <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Industries.html"
                     style="padding: 10px 0px;">Industries</a>
                   <div class="u-nav-popup">
                     <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-8">
@@ -201,7 +201,7 @@
                     </ul>
                   </div>
                 </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Services.html"
+                <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Services.html"
                     style="padding: 10px 0px;">Services</a>
                   <div class="u-nav-popup">
                     <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-9">
