--- a/Support.html
+++ b/Support.html
@@ -20,6 +20,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.0/css/font-awesome.min.css">
 
+  <script src="./Scripts/Global.js"></script>
 
 
   <script type="application/ld+json">{
@@ -38,9 +39,9 @@
   <header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-dd13">
     <div class="u-clearfix u-sheet u-sheet-1">
       <a href="index.html#carousel_13fe" data-page-id="2206810918"
-        class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-1">CONTACT US</a>
+        class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-1 responsiveContactusPosition">CONTACT US</a>
       <nav class="u-align-left u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="MD">
-        <div class="menu-collapse"
+        <div class="menu-collapse responsiveHamburgerPosition"
           style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
           <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link"
             href="#">
@@ -157,10 +158,10 @@
             <div class="u-inner-container-layout u-sidenav-overflow">
               <div class="u-menu-close"></div>
               <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-6">
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html"
+                <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="index.html"
                     style="padding: 10px 0px;">Home</a>
                 </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html"
+                <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="About.html"
                     style="padding: 10px 0px;">About</a>
                   <div class="u-nav-popup">
                     <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-7">
@@ -176,7 +177,7 @@
                     </ul>
                   </div>
                 </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html"
+                <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Industries.html"
                     style="padding: 10px 0px;">Industries</a>
                   <div class="u-nav-popup">
                     <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-8">
@@ -201,7 +202,7 @@
                     </ul>
                   </div>
                 </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Services.html"
+                <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Services.html"
                     style="padding: 10px 0px;">Services</a>
                   <div class="u-nav-popup">
                     <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-9">
@@ -216,7 +217,7 @@
                     </ul>
                   </div>
                 </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Support.html"
+                <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Support.html"
                     style="padding: 10px 0px;">Support</a>
                   <div class="u-nav-popup">
                     <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-10">
@@ -246,8 +247,8 @@
         <div class="u-accordion-item">
           <a class="active u-accordion-link u-border-1 u-border-active-grey-75 u-border-grey-15 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style u-text-black u-accordion-link-1"
             id="link-accordion-6327" aria-controls="accordion-6327" aria-selected="true">
-            <span class="u-accordion-link-text">Do you provide support?</span><span
-              class="u-accordion-link-icon u-icon u-text-black u-icon-1">
+            <span class="u-accordion-link-text toggleupdownarrow">Do you provide support?</span><span 
+              class="u-accordion-link-icon u-icon u-text-black u-icon-1 toggleupdownarrow">
 
               <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style="">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-8021"></use>
