--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
   <header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-dd13">
     <div class="u-clearfix u-sheet u-sheet-1">
       <a href="index.html#carousel_13fe" data-page-id="2206810918"
-        class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-1 responsiveContactusPosition ">CONTACT
-        US</a>
+        class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-1 responsiveContactusPosition ">CONTACT US</a>
       <nav class="u-align-left u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="MD">
-        <div class="menu-collapse responsiveHamburgerPosition"
+        <div class="menu-collapse responsiveHamburgerPosition"  
           style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
           <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link"
             href="#">
@@ -79,11 +78,11 @@
         </div>
         <div class="u-custom-menu u-nav-container">
           <ul class="u-nav u-spacing-30 u-unstyled u-nav-1">
-            <li class="u-nav-item "><a
+            <li class="u-nav-item "><a   
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="index.html" style="padding: 10px 0px;">Home</a>
             </li>
-            <li class="u-nav-item "><a
+            <li class="u-nav-item "><a  
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="About.html" style="padding: 10px 0px;">About</a>
               <div class="u-nav-popup">
@@ -100,7 +99,7 @@
                 </ul>
               </div>
             </li>
-            <li class="u-nav-item "><a
+            <li class="u-nav-item "><a  
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="Industries.html" style="padding: 10px 0px;">Industries</a>
               <div class="u-nav-popup">
@@ -126,7 +125,7 @@
                 </ul>
               </div>
             </li>
-            <li class="u-nav-item "><a
+            <li class="u-nav-item "><a  
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="Services.html" style="padding: 10px 0px;">Services</a>
               <div class="u-nav-popup">
@@ -142,7 +141,7 @@
                 </ul>
               </div>
             </li>
-            <li class="u-nav-item "><a
+            <li class="u-nav-item "><a  
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="Support.html" style="padding: 10px 0px;">Support</a>
               <div class="u-nav-popup">
@@ -928,7 +927,7 @@
       </a>. 
     </section> -->
 
-
+   
 </body>
 
 </html>
