--- a/Support.html
+++ b/Support.html
@@ -247,8 +247,8 @@
         <div class="u-accordion-item">
           <a class="active u-accordion-link u-border-1 u-border-active-grey-75 u-border-grey-15 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style u-text-black u-accordion-link-1"
             id="link-accordion-6327" aria-controls="accordion-6327" aria-selected="true">
-            <span class="u-accordion-link-text toggleupdownarrow">Do you provide support?</span><span 
-              class="u-accordion-link-icon u-icon u-text-black u-icon-1 toggleupdownarrow">
+            <span class="u-accordion-link-text">Do you provide support?</span><span 
+              class="u-accordion-link-icon u-icon u-text-black u-icon-1">
 
               <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 16 16" style="">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-8021"></use>
