--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <link id="u-page-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Bai+Jamjuree:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://salesportal.aptaracorp.com/PPDI/POC/js/geometry/geometryangle.js"></script>
-    <script src="./Scripts/geometryangle.js"></script>
+    <!-- <script src="https://salesportal.aptaracorp.com/PPDI/POC/js/geometry/geometryangle.js"></script>
+    <script src="./Scripts/geometryangle.js"></script> -->
 
   <script type="application/ld+json">{
 		"@context": "http://schema.org",
@@ -31,6 +31,7 @@
 		"name": "Site1",
 		"logo": "#"
 }</script>
+<script src="./Scripts/MoveToTop.js"></script>
   <meta name="theme-color" content="#e84a90">
   <meta property="og:title" content="Home">
   <meta property="og:description" content="">
@@ -927,7 +928,8 @@
       </a>. 
     </section> -->
 
-   
+   <!-- ***************** Move to top button *************************** -->
+<a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button"><i class="fa fa-chevron-up"></i></a>
 </body>
 
 </html>
