--- a/Services.html
+++ b/Services.html
@@ -231,12 +231,13 @@
         </div>
       </nav>
       <a href="index.html" class="u-image u-logo u-image-1" data-image-width="80" data-image-height="40">
-        <img src="./images/tempLogo.jpg" class="u-logo-image u-logo-image-1">
+        <img src="./images/logo.jpg" class="u-logo-image u-logo-image-1">
       </a>
     </div>
   </header>
 
   <!-- *******************Our footer************************8 -->
+
   <footer class="bg-primary text-center text-lg-start text-white">
     <!-- Grid container -->
     <div class="container p-4">
@@ -248,13 +249,13 @@
           <div
             class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
             style="width: 150px; height: 150px;">
-            <img src="https://mdbootstrap.com/img/Photos/new-templates/animal-shelter/logo.png" height="70" alt=""
+            <img src="./images/logo.jpg" height="70" alt=""
               loading="lazy" />
           </div>
 
-          <p class="text-center">Homless animal shelter The budgetary unit of the Capital City of Warsaw</p>
+          <p class="text-center">Data science where the real magic begins and dreams comes ture </p>
 
-          <ul class="list-unstyled d-flex flex-row justify-content-center">
+          <!-- <ul class="list-unstyled d-flex flex-row justify-content-center">
             <li>
               <a class="text-white px-2" href="#!">
                 <i class="fa fa-facebook-square"></i>
@@ -270,7 +271,7 @@
                 <i class="fa fa-youtube"></i>
               </a>
             </li>
-          </ul>
+          </ul> -->
 
         </div>
         <!--Grid column-->
@@ -278,42 +279,72 @@
         <!--Grid column-->
         <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
           <h5 class="text-uppercase margin-gap
-            margin-gap mb-4">Animals</h5>
+              margin-gap mb-4">Services</h5>
 
           <ul class="list-unstyled">
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-paw pe-3"></i>When your pet is missing</a>
+              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Data Science</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-paw pe-3"></i>Recently found</a>
+              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Data Analysis</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-paw pe-3"></i>How to adopt?</a>
+              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Data Engineering</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-paw pe-3"></i>Pets for adoption</a>
+              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Business Intelligence</a>
+            </li>
+            <!-- <li class="mb-2">
+              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Material gifts</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-paw pe-3"></i>Material gifts</a>
+              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Help with walks</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-paw pe-3"></i>Help with walks</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-paw pe-3"></i>Volunteer activities</a>
-            </li>
+              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Volunteer activities</a>
+            </li> -->
           </ul>
         </div>
         <!--Grid column-->
 
+
+        <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase margin-gap
+              margin-gap mb-4">Industries</h5>
+
+          <ul class="list-unstyled">
+            <li class="mb-2">
+              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Retail</a>
+            </li>
+            <li class="mb-2">
+              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Health Care</a>
+            </li>
+            <li class="mb-2">
+              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Real State</a>
+            </li>
+            <li class="mb-2">
+              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Financial Sector</a>
+            </li>
+            <li class="mb-2">
+              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Logistics</a>
+            </li>
+            <li class="mb-2">
+              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Manufacturing</a>
+            </li>
+            <!-- <li class="mb-2">
+              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Volunteer activities</a>
+            </li> --> 
+          </ul>
+        </div>
+
         <!--Grid column-->
         <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
           <h5 class="text-uppercase margin-gap
-            margin-gap mb-4">Contact</h5>
+              margin-gap mb-4">Contact</h5>
 
           <ul class="list-unstyled">
             <li>
-              <p><i class="fa fa-map-marker-alt pe-2"></i>Warsaw, 57 Street, Poland</p>
+              <p><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>World Trade Park, Malviya nagar</p>
             </li>
             <li>
               <p><i class="fa fa-phone pe-2"></i>+ 01 234 567 89</p>
