--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Bai+Jamjuree:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i">
   <link id="u-page-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Bai+Jamjuree:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <!-- <script src="https://salesportal.aptaracorp.com/PPDI/POC/js/geometry/geometryangle.js"></script>
-    <script src="./Scripts/geometryangle.js"></script> -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="./JS-libraries/geometryangle.min.js"></script>
 
   <script type="application/ld+json">{
 		"@context": "http://schema.org",
@@ -930,6 +929,8 @@
 
    <!-- ***************** Move to top button *************************** -->
 <a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button"><i class="fa fa-chevron-up"></i></a>
+<script src="./Scripts/geometryangle.js"></script>
+
 </body>
 
 </html>
