--- a/About.html
+++ b/About.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="./CSS-libraries/nicepage.css" media="screen">
   <link rel="stylesheet" href="./Styles/About.css" media="screen">
   <link rel="stylesheet" href="./Styles/Global.css">
-  <script class="u-script" type="text/javascript" src="./JS-libraries/jquery-min.js" defer=""></script>
-  <script class="u-script" type="text/javascript" src="./JS-libraries/nicepage-min.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="./JS-libraries/jquery.min.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="./JS-libraries/nicepage.min.js" defer=""></script>
   <link id="u-theme-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Bai+Jamjuree:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
