--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script class="u-script" type="text/javascript" src="./JS-libraries/jquery-min.js" defer=""></script>
-  <script class="u-script" type="text/javascript" src="./JS-libraries/nicepage-min.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="./JS-libraries/jquery.min.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="./JS-libraries/nicepage.min.js" defer=""></script>
   <link id="u-theme-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Bai+Jamjuree:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i">
   <link id="u-page-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Bai+Jamjuree:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="./JS-libraries/jquery.2.1.3.min.js"></script>
     <script src="./JS-libraries/geometryangle.min.js"></script>
 
   <script type="application/ld+json">{
