--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
   <meta property="og:description" content="">
   <meta property="og:type" content="website">
 </head>
+<div class="preloader"></div>
+  <div class="preloaderlayer"></div>
 
 <body data-home-page="index.html" data-home-page-title="Home" class="u-body">
   <header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-dd13">
@@ -961,6 +963,7 @@
 <a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button"><i class="fa fa-chevron-up"></i></a>
 <script src="./Scripts/geometryangle.js"></script>
 
+<script src="./Scripts/Global.js"></script>
 </body>
 
 </html>
