--- a/Industries.html
+++ b/Industries.html
@@ -15,8 +15,7 @@
   <script class="u-script" type="text/javascript" src="./JS-libraries/nicepage.min.js" defer=""></script>
   <link id="u-theme-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Bai+Jamjuree:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="./CSS-libraries/bootstrap.5.1.3.min.css"rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.0/css/font-awesome.min.css">
 
   <script type="application/ld+json">{
@@ -32,7 +31,7 @@
 </head>
 
 <body class="u-body">
-  <header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-dd13">
+  <header class="fixedposition u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-dd13">
     <div class="u-clearfix u-sheet u-sheet-1">
       <a href="index.html#carousel_13fe" data-page-id="2206810918"
         class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-1 responsiveContactusPosition">CONTACT US</a>
@@ -230,7 +229,7 @@
         </div>
       </nav>
       <a href="index.html" class="u-image u-logo u-image-1" data-image-width="80" data-image-height="40">
-        <img src="./images/logo.jpg" class="u-logo-image u-logo-image-1">
+       <img src="./images/logo.jpg" class="positioninbetween u-logo-image u-logo-image-1">
       </a>
     </div>
   </header>
