--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <link rel="stylesheet" href="./Styles/Home.css" media="screen">
   <link rel="stylesheet" href="./Styles/Global.css">
   <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="./CSS-libraries/bootstrap.5.1.3.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script class="u-script" type="text/javascript" src="./JS-libraries/jquery.min.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="./JS-libraries/nicepage.min.js" defer=""></script>
@@ -36,11 +35,13 @@
   <meta property="og:description" content="">
   <meta property="og:type" content="website">
 </head>
-<div class="preloader"></div>
+<div class="preloader">
+  <img class="preloader-image" src="./images/logo.jpg"  alt="">
+</div>
   <div class="preloaderlayer"></div>
 
 <body data-home-page="index.html" data-home-page-title="Home" class="u-body">
-  <header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-dd13">
+  <header class="fixedposition u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-dd13">
     <div class="u-clearfix u-sheet u-sheet-1">
       <a href="index.html#carousel_13fe" data-page-id="2206810918"
         class="u-btn u-button-style u-gradient u-none u-text-body-alt-color u-btn-1 responsiveContactusPosition ">CONTACT US</a>
@@ -238,7 +239,7 @@
         </div>
       </nav>
       <a href="index.html" class="u-image u-logo u-image-1" data-image-width="80" data-image-height="40">
-        <img src="./images/logo.jpg" class="u-logo-image u-logo-image-1">
+       <img src="./images/logo.jpg" class="positioninbetween u-logo-image u-logo-image-1">
       </a>
     </div>
   </header>
