changed geometryangle config, text on banner

--- a/index.html
+++ b/index.html
@@ -252,9 +252,8 @@
               <div class="u-layout-col">
                 <div class="u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
                   <div class="u-container-layout u-container-layout-1">
-                    <h6 class="u-custom-font u-text u-text-body-alt-color u-text-font u-text-1">creative design agency
-                    </h6>
-                    <h1 class="u-custom-font u-text u-title u-text-2">We live to turn great ideas</h1>
+                    <h1 class="u-custom-font u-text u-title u-text-2">Kadamb</h1>
+                    <h4 class="u-custom-font u-text u-text-body-alt-color u-text-font u-text-1">We make sense out of data</h4>
                   </div>
                 </div>
                 <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-2">
