--- a/About.html
+++ b/About.html
@@ -33,7 +33,12 @@
   <meta property="og:type" content="website">
 </head>
 
-<body class="u-body">
+<div class="preloader">
+  <img class="preloader-image" src="./images/logo.jpg"  alt="">
+</div>
+  <div class="preloaderlayer"></div>
+
+ <body class="u-body">
   <header class="fixedposition u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-dd13">
     <div class="u-clearfix u-sheet u-sheet-1">
       <a href="index.html#carousel_13fe" data-page-id="2206810918"
@@ -571,7 +576,7 @@
         <span></span>
       </a>. 
     </section> -->
-
+    <script src="./Scripts/Global.js"></script>
 </body>
 
 </html>
