--- a/Industries.html
+++ b/Industries.html
@@ -29,7 +29,10 @@
   <meta property="og:description" content="">
   <meta property="og:type" content="website">
 </head>
-
+<div class="preloader">
+  <img class="preloader-image" src="./images/logo.jpg"  alt="">
+</div>
+  <div class="preloaderlayer"></div>
 <body class="u-body">
   <header class="fixedposition u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-dd13">
     <div class="u-clearfix u-sheet u-sheet-1">
@@ -458,6 +461,7 @@
         <span></span>
       </a>. 
     </section> -->
+    <script src="./Scripts/Global.js"></script>
 </body>
 
 </html>
