--- a/About.html
+++ b/About.html
@@ -87,7 +87,7 @@
                       data-page-id="48129665">About Us</a>
                   </li>
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="About.html#carousel_1182"
-                      data-page-id="48129665">Contact Us</a>
+                      data-page-id="48129665">Our Vision</a>
                   </li>
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="About.html#sec-ec75"
                       data-page-id="48129665">Why Us</a>
@@ -124,7 +124,7 @@
             <li class="u-nav-item"><a
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="Services.html" style="padding: 10px 0px;">Services</a>
-              <div class="u-nav-popup">
+              <!-- <div class="u-nav-popup">
                 <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-4">
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white">Data Sciences</a>
                   </li>
@@ -135,7 +135,7 @@
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white">Business Intelligence</a>
                   </li>
                 </ul>
-              </div>
+              </div> -->
             </li>
             <li class="u-nav-item"><a
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
@@ -167,7 +167,7 @@
                           href="About.html#carousel_b831" data-page-id="48129665">About Us</a>
                       </li>
                       <li class="u-nav-item "><a class="u-button-style u-nav-link" href="About.html#carousel_1182"
-                          data-page-id="48129665">Contact Us</a>
+                          data-page-id="48129665">Our Vision</a>
                       </li>
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#sec-ec75"
                           data-page-id="48129665">Why Us</a>
@@ -202,7 +202,7 @@
                 </li>
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Services.html"
                     style="padding: 10px 0px;">Services</a>
-                  <div class="u-nav-popup">
+                  <!-- <div class="u-nav-popup">
                     <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-9">
                       <li class="u-nav-item"><a class="u-button-style u-nav-link">Data Sciences</a>
                       </li>
@@ -213,7 +213,7 @@
                       <li class="u-nav-item"><a class="u-button-style u-nav-link">Business Intelligence</a>
                       </li>
                     </ul>
-                  </div>
+                  </div> -->
                 </li>
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Support.html"
                     style="padding: 10px 0px;">Support</a>
@@ -248,7 +248,7 @@
             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
             esse cillum dolore eu fugiat nulla pariatur.</p>
           <a href=""
-            class="u-active-palette-1-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-base u-radius-50 u-text-active-white u-text-hover-white u-text-palette-1-base u-white u-btn-1">Download brochure 
+            class="u-active-palette-1-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-base u-radius-50 u-text-active-white u-text-hover-white u-text-palette-1-base u-white u-btn-1"> <i class="fa fa-solid fa-download"> &nbsp;</i>brochure 
             </a>
         </div>
       </div>
@@ -463,7 +463,7 @@
         <!--Grid column-->
 
         <!--Grid column-->
-        <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
+        <!-- <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
           <h5 class="text-uppercase margin-gap
               margin-gap mb-4">Services</h5>
 
@@ -480,17 +480,8 @@
             <li class="mb-2">
               <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Business Intelligence</a>
             </li>
-            <!-- <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Material gifts</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Help with walks</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Volunteer activities</a>
-            </li> -->
           </ul>
-        </div>
+        </div> -->
         <!--Grid column-->
 
 
