--- a/Industries.html
+++ b/Industries.html
@@ -84,7 +84,7 @@
                       data-page-id="48129665">About Us</a>
                   </li>
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="About.html#carousel_1182"
-                      data-page-id="48129665">Contact Us</a>
+                      data-page-id="48129665">Our Vision</a>
                   </li>
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="About.html#sec-ec75"
                       data-page-id="48129665">Why Us</a>
@@ -121,7 +121,7 @@
             <li class="u-nav-item"><a
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="Services.html" style="padding: 10px 0px;">Services</a>
-              <div class="u-nav-popup">
+              <!-- <div class="u-nav-popup">
                 <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-4">
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white">Data Sciences</a>
                   </li>
@@ -132,7 +132,7 @@
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white">Business Intelligence</a>
                   </li>
                 </ul>
-              </div>
+              </div> -->
             </li>
             <li class="u-nav-item"><a
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
@@ -164,7 +164,7 @@
                           data-page-id="48129665">About Us</a>
                       </li>
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#carousel_1182"
-                          data-page-id="48129665">Contact Us</a>
+                          data-page-id="48129665">Our Vision</a>
                       </li>
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#sec-ec75"
                           data-page-id="48129665">Why Us</a>
@@ -199,7 +199,7 @@
                 </li>
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Services.html"
                     style="padding: 10px 0px;">Services</a>
-                  <div class="u-nav-popup">
+                  <!-- <div class="u-nav-popup">
                     <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-9">
                       <li class="u-nav-item"><a class="u-button-style u-nav-link">Data Sciences</a>
                       </li>
@@ -210,7 +210,7 @@
                       <li class="u-nav-item"><a class="u-button-style u-nav-link">Business Intelligence</a>
                       </li>
                     </ul>
-                  </div>
+                  </div> -->
                 </li>
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Support.html"
                     style="padding: 10px 0px;">Support</a>
@@ -353,7 +353,7 @@
         <!--Grid column-->
 
         <!--Grid column-->
-        <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
+        <!-- <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
           <h5 class="text-uppercase margin-gap
               margin-gap mb-4">Services</h5>
 
@@ -370,17 +370,8 @@
             <li class="mb-2">
               <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Business Intelligence</a>
             </li>
-            <!-- <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Material gifts</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Help with walks</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Volunteer activities</a>
-            </li> -->
           </ul>
-        </div>
+        </div> -->
         <!--Grid column-->
 
 
