--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                       data-page-id="48129665">About Us</a>
                   </li>
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="About.html#carousel_1182"
-                      data-page-id="48129665">Contact Us</a>
+                      data-page-id="48129665">Our Vision</a>
                   </li>
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="About.html#sec-ec75"
                       data-page-id="48129665">Why Us</a>
@@ -134,7 +134,7 @@
             <li class="u-nav-item "><a  
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="Services.html" style="padding: 10px 0px;">Services</a>
-              <div class="u-nav-popup">
+              <!-- <div class="u-nav-popup">
                 <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-4">
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white">Data Sciences</a>
                   </li>
@@ -145,7 +145,7 @@
                   <li class="u-nav-item"><a class="u-button-style u-nav-link u-white">Business Intelligence</a>
                   </li>
                 </ul>
-              </div>
+              </div> -->
             </li>
             <li class="u-nav-item "><a  
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
@@ -177,7 +177,7 @@
                           data-page-id="48129665">About Us</a>
                       </li>
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#carousel_1182"
-                          data-page-id="48129665">Contact Us</a>
+                          data-page-id="48129665">Our Vision</a>
                       </li>
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#sec-ec75"
                           data-page-id="48129665">Why Us</a>
@@ -212,7 +212,7 @@
                 </li>
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Services.html"
                     style="padding: 10px 0px;">Services</a>
-                  <div class="u-nav-popup">
+                  <!-- <div class="u-nav-popup">
                     <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-9">
                       <li class="u-nav-item"><a class="u-button-style u-nav-link">Data Sciences</a>
                       </li>
@@ -223,7 +223,7 @@
                       <li class="u-nav-item"><a class="u-button-style u-nav-link">Business Intelligence</a>
                       </li>
                     </ul>
-                  </div>
+                  </div> -->
                 </li>
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Support.html"
                     style="padding: 10px 0px;">Support</a>
@@ -768,7 +768,7 @@
             </svg><img></span>&nbsp;203, Envato Labs, Behind Alis Steet, Australia
         </p>
         <div class="u-social-icons u-spacing-16 u-social-icons-1">
-          <a class="u-social-url" target="_blank" data-type="Custom" title="Custom" href=""><span
+          <!-- <a class="u-social-url" target="_blank" data-type="Custom" title="Custom" href=""><span
               class="u-icon u-icon-circle u-social-custom u-social-icon u-text-palette-2-base u-icon-4"><svg
                 class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 512 512" style="">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-7180"></use>
@@ -816,7 +816,12 @@
                   d="m508.234375 91.527344-.023437-.234375c-.433594-4.121094-4.75-40.777344-22.570313-59.421875-20.597656-21.929688-43.949219-24.59375-55.179687-25.871094-.929688-.105469-1.78125-.203125-2.542969-.304688l-.894531-.09375c-67.6875-4.921874-169.910157-5.5937495-170.933594-5.59765575l-.089844-.00390625-.089844.00390625c-1.023437.00390625-103.246094.67578175-171.542968 5.59765575l-.902344.09375c-.726563.097657-1.527344.1875-2.398438.289063-11.101562 1.28125-34.203125 3.949219-54.859375 26.671875-16.972656 18.445312-21.878906 54.316406-22.382812 58.347656l-.058594.523438c-.152344 1.714844-3.765625 42.539062-3.765625 83.523437v38.3125c0 40.984375 3.613281 81.808594 3.765625 83.527344l.027344.257813c.433593 4.054687 4.746093 40.039062 22.484375 58.691406 19.367187 21.195312 43.855468 24 57.027344 25.507812 2.082031.238282 3.875.441406 5.097656.65625l1.183594.164063c39.082031 3.71875 161.617187 5.550781 166.8125 5.625l.15625.003906.15625-.003906c1.023437-.003907 103.242187-.675781 170.929687-5.597657l.894531-.09375c.855469-.113281 1.816406-.214843 2.871094-.324218 11.039062-1.171875 34.015625-3.605469 54.386719-26.019532 16.972656-18.449218 21.882812-54.320312 22.382812-58.347656l.058594-.523437c.152344-1.71875 3.769531-42.539063 3.769531-83.523438v-38.3125c-.003906-40.984375-3.617187-81.804687-3.769531-83.523437zm-26.238281 121.835937c0 37.933594-3.3125 77-3.625 80.585938-1.273438 9.878906-6.449219 32.574219-14.71875 41.5625-12.75 14.027343-25.847656 15.417969-35.410156 16.429687-1.15625.121094-2.226563.238282-3.195313.359375-65.46875 4.734375-163.832031 5.460938-168.363281 5.488281-5.082032-.074218-125.824219-1.921874-163.714844-5.441406-1.941406-.316406-4.039062-.558594-6.25-.808594-11.214844-1.285156-26.566406-3.042968-38.371094-16.027343l-.277344-.296875c-8.125-8.464844-13.152343-29.6875-14.429687-41.148438-.238281-2.710937-3.636719-42.238281-3.636719-80.703125v-38.3125c0-37.890625 3.304688-76.914062 3.625-80.574219 1.519532-11.636718 6.792969-32.957031 14.71875-41.574218 13.140625-14.453125 26.996094-16.054688 36.160156-17.113282.875-.101562 1.691407-.195312 2.445313-.292968 66.421875-4.757813 165.492187-5.464844 169.046875-5.492188 3.554688.023438 102.589844.734375 168.421875 5.492188.808594.101562 1.691406.203125 2.640625.3125 9.425781 1.074218 23.671875 2.699218 36.746094 16.644531l.121094.128906c8.125 8.464844 13.152343 30.058594 14.429687 41.75.226563 2.558594 3.636719 42.171875 3.636719 80.71875zm0 0">
                 </path>
               </svg></span>
-          </a>
+          </a> -->
+          <a class="u-social-url" target="_blank" data-type="Custom" title="Custom" href="https://www.linkedin.com/"><span
+            class="u-icon u-icon-circle u-social-custom u-social-icon u-text-palette-2-base u-icon-7">
+            <h4 style="margin-left: 10px;"><i class="fa fa-brands fa-linkedin"></i></h4>
+          </span>
+        </a> 
         </div>
         <div class="u-expanded-width-sm u-expanded-width-xs u-form u-form-1">
           <form action="#" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form"
@@ -896,8 +901,8 @@
                 <i class="fa fa-youtube"></i>
               </a>
             </li> -->
-            <a class="text-white px-2" href="#!">
-              <i class="fa fa-linkedin-square"></i>
+            <a class="text-white px-2" target="_blank" href="https://www.linkedin.com/">
+              <h4><i class="fa fa-linkedin-square"></i></h4>
             </a>
           </li>
           </ul>
@@ -906,7 +911,7 @@
         <!--Grid column-->
 
         <!--Grid column-->
-        <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
+        <!-- <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
           <h5 class="text-uppercase margin-gap
               margin-gap mb-4">Services</h5>
 
@@ -923,17 +928,8 @@
             <li class="mb-2">
               <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Business Intelligence</a>
             </li>
-            <!-- <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Material gifts</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Help with walks</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Volunteer activities</a>
-            </li> -->
           </ul>
-        </div>
+        </div> -->
         <!--Grid column-->
 
 
