--- a/About.html
+++ b/About.html
@@ -458,8 +458,8 @@
               </a>
             </li>
             <li> -->
-              <a class="text-white px-2" href="#!">
-                <i class="fa fa-linkedin-square"></i>
+              <a class="text-white px-2" target="_blank" href="https://www.linkedin.com/">
+                <h4><i class="fa fa-linkedin-square"></i></h4>
               </a>
             </li>
           </ul> 
