--- a/Services.html
+++ b/Services.html
@@ -273,8 +273,8 @@
                 <i class="fa fa-youtube"></i>
               </a>
             </li> -->
-            <a class="text-white px-2" href="#!">
-              <i class="fa fa-linkedin-square"></i>
+            <a class="text-white px-2" target="_blank" href="https://www.linkedin.com/">
+              <h4><i class="fa fa-linkedin-square"></i></h4>
             </a>
           </li>
           </ul> 
