services section started

--- a/Services.html
+++ b/Services.html
@@ -238,7 +238,60 @@
     </div>
   </header>
 
-  <!-- *******************Our footer************************8 -->
+  <!-- *******************Services Section******************* -->
+  <!-- ======= Hero Section ======= -->
+  <section id="hero">
+
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center" data-aos="fade-up">
+          <div>
+            <h1>We analyze your data to help you grow your businesses</h1>
+            <a href="#about" class="btn-get-started scrollto">Get Started</a>
+          </div>
+        </div>
+        <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
+          <img src="./images/hero-bg.png" class="img-fluid" alt="">
+        </div>
+      </div>
+    </div>
+
+  </section>
+  <!-- End Hero -->
+
+  <main id="main">
+
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-6" data-aos="zoom-in">
+            <img src="./images/2cd8810a-2002-afce-79ce-a321438ebdfe.jpg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-6 d-flex flex-column justify-contents-center" data-aos="fade-left">
+            <div class="content pt-4 pt-lg-0">
+              <h3>Learn more about us</h3>
+              <p class="fst-italic">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                magna aliqua.
+              </p>
+              <ul>
+                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperd</li>
+              </ul>
+              <p>
+                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate tera noden carma palorp mades tera.
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End About Section -->
+
+  <!-- *******************Our footer************************* -->
 
   <footer class="bg-primary text-center text-lg-start text-white">
     <!-- Grid container -->
@@ -280,28 +333,6 @@
           </ul> 
 
         </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <!-- <div class="col-lg-3 mx-auto  col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase margin-gap
-              margin-gap mb-4">Services</h5>
-
-          <ul class="list-unstyled">
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Data Science</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Data Analysis</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Data Engineering</a>
-            </li>
-            <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Business Intelligence</a>
-            </li>
-          </ul>
-        </div> -->
         <!--Grid column-->
 
 
@@ -364,21 +395,6 @@
     <!-- Copyright -->
   </footer>
 
-  <!-- **************************Old footer******************************* -->
-  <!-- <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-5185"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1"> © 2022 GitHub, Inc. All Rights Reserved.</p>
-      </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="" target="_blank">
-        <span></span>
-      </a>
-      <p class="u-text">
-        <span></span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span></span>
-      </a>. 
-    </section> -->
     <script src="./Scripts/Global.js"></script>
 </body>
 
