--- a/Services.html
+++ b/Services.html
@@ -253,7 +253,7 @@
             </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
-          <!-- <img src="./images/hero-bg.png" class="img-fluid" alt=""> -->
+          <img src="./images/services.jfif" class="img-fluid" alt="">
         </div>
       </div>
     </div>
@@ -269,7 +269,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="zoom-in">
-            <img src="./images/2cd8810a-2002-afce-79ce-a321438ebdfe.jpg" class="img-fluid" alt="">
+            <img src="./images/pic3.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 d-flex flex-column justify-contents-center padding_rl" data-aos="fade-left">
             <div class="content pt-4 pt-lg-0">
@@ -298,11 +298,11 @@
       <div class="container">
         <div class="row d-flex flex-row-reverse">
           <div class="col-lg-6 img_padding_mv" data-aos="zoom-in">
-            <img src="./images/2cd8810a-2002-afce-79ce-a321438ebdfe.jpg" class="img-fluid" alt="">
+            <img src="./images/Data analysis.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 d-flex flex-column justify-contents-center padding_rl" data-aos="fade-left">
             <div class="content pt-4 pt-lg-0">
-              <h3>Data Business</h3>
+              <h3>Data Analysis</h3>
               <p class="fst-italic">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                 magna aliqua.
@@ -329,7 +329,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="zoom-in">
-            <img src="./images/2cd8810a-2002-afce-79ce-a321438ebdfe.jpg" class="img-fluid" alt="">
+            <img src="./images/pic2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 d-flex flex-column justify-contents-center padding_rl" data-aos="fade-left">
             <div class="content pt-4 pt-lg-0">
@@ -361,11 +361,11 @@
 
         <div class="row d-flex flex-row-reverse">
           <div class="col-lg-6" data-aos="zoom-in">
-            <img src="./images/2cd8810a-2002-afce-79ce-a321438ebdfe.jpg" class="img-fluid" alt="">
+            <img src="./images/pic1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 d-flex flex-column justify-contents-center padding_rl" data-aos="fade-left">
             <div class="content pt-4 pt-lg-0">
-              <h3>Business intelligence</h3>
+              <h3>Business ntelligence</h3>
               <p class="fst-italic">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                 magna aliqua.
