removed unnecessary images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="We live to turn great ideas, Key Features, What We Do, Our Portfolio">
   <meta name="description" content="">
   <meta name="page_type" content="np-template-header-footer-from-plugin">
-  <title> New Improved Home</title>
+  <title>Kadamb Data Analysis</title>
   <link rel="stylesheet" href="./CSS-libraries/nicepage.css" media="screen">
   <link rel="stylesheet" href="./Styles/Home.css" media="screen">
   <link rel="stylesheet" href="./Styles/Global.css">
@@ -333,9 +333,6 @@
         senectus et netus. Id cursus metus aliquam eleifend mi in. Quis commodo odio aenean sed. Sollicitudin ac orci
         phasellus egestas tellus. Id velit ut tortor pretium.<br>
       </p>
-
-      <!-- <img class="u-image u-image-contain u-image-default u-image-1" src="images/photo-1599658880436-c61792e70672.jfif"
-        alt="" data-image-width="1170" data-image-height="780"> -->
 
     </div>
   </section>
