changes color scheme

--- a/Industries.html
+++ b/Industries.html
@@ -24,7 +24,7 @@
 		"name": "Site1",
 		"logo": "#"
 }</script>
-  <meta name="theme-color" content="#e84a90">
+  <meta name="theme-color" content="#7EC8E3">
   <meta property="og:title" content="Industries">
   <meta property="og:description" content="">
   <meta property="og:type" content="website">
