--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		"logo": "#"
 }</script>
 <script src="./Scripts/MoveToTop.js"></script>
-  <meta name="theme-color" content="#e84a90">
+  <meta name="theme-color" content="#7EC8E3">
   <meta property="og:title" content="Home">
   <meta property="og:description" content="">
   <meta property="og:type" content="website">
@@ -250,7 +250,7 @@
     <div class="u-clearfix u-sheet u-sheet-1">
       <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-spacing-vertical u-layout-wrap u-layout-wrap-1">
         <div class="u-gutter-0 u-layout">
-          <div class="u-layout-row">
+          <div class="u-layout-row" style="margin-top: 100px;">
             <div class="u-size-34-lg u-size-34-xl u-size-35-md u-size-35-sm u-size-35-xs">
               <div class="u-layout-col">
                 <div class="u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
@@ -891,7 +891,7 @@
 
   <!--            ********************** Our Footer****************************** -->
 
-  <footer class="bg-primary text-center text-lg-start text-white">
+  <footer class="bg-primary text-center text-lg-start text-white color-change">
     <!-- Grid container -->
     <div class="container p-4">
       <!--Grid row-->
