--- a/About.html
+++ b/About.html
@@ -27,7 +27,7 @@
 		"name": "Site1",
 		"logo": "#"
 }</script>
-  <meta name="theme-color" content="#e84a90">
+  <meta name="theme-color" content="#7EC8E3">
   <meta property="og:title" content="About">
   <meta property="og:description" content="">
   <meta property="og:type" content="website">
@@ -404,8 +404,7 @@
       </p>
     </div>
   </section>
-
-  <section class=" u-clearfix u-grey-5 u-section-3" id="sec-ec75">
+  <section class=" u-clearfix u-section-3" id="sec-ec75">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <h3 class="u-text u-text-1">Why Us ?<br>
       </h3>
