--- a/Support.html
+++ b/Support.html
@@ -25,7 +25,7 @@
 		"name": "Site1",
 		"logo": "#"
 }</script>
-  <meta name="theme-color" content="#e84a90">
+  <meta name="theme-color" content="#7EC8E3">
   <meta property="og:title" content="Support">
   <meta property="og:description" content="">
   <meta property="og:type" content="website">
