minor fixes in services page and button color

--- a/Services.html
+++ b/Services.html
@@ -246,14 +246,14 @@
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center" data-aos="fade-up">
           <div>
-            <h1>We analyze your data to help you grow your businesses</h1>
+            <h1>We analyze your data to help you grow your businesse</h1>
             <a href="#about" class="btn-get-started scrollto">
             <button class="u-btn u-border-none u-btn-round u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-palette-1-base u-radius-50 u-btn-1">Get Started</button>
             </a>
             </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
-          <img src="./images/services.jfif" class="img-fluid" alt="">
+          <img src="./images/data_science_illustration.jpg" class="img-fluid" alt="">
         </div>
       </div>
     </div>
@@ -391,7 +391,7 @@
 
   <footer class="bg-primary text-center text-lg-start text-white">
     <!-- Grid container -->
-    <div class="container p-4">
+    <div class="container p-4 mt-0">
       <!--Grid row-->
       <div class="row my-4">
         <!--Grid column-->
