home page fixes, content on top of video

--- a/About.html
+++ b/About.html
@@ -389,8 +389,36 @@
   </section> -->
   
 
+  <section class="about alt_bgcolor padding_in_btw">
+    <div class="container">
+      <div class="row d-flex flex-row-reverse">
+        <div class="col-lg-6 img_padding_mv padding_rl" data-aos="zoom-in">
+          <img src="./images/ourvision_aboutpage_1.jpg" class="img-fluid" alt="">
+        </div>
+        <div class="col-lg-6 d-flex flex-column justify-contents-center padding_rl" data-aos="fade-left">
+          <div class="content pt-4 pt-lg-0">
+            <h3>Our vision</h3>
+            <p class="fst-italic">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+              magna aliqua.
+            </p>
+            <ul>
+              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperd</li>
+            </ul>
+            <p>
+              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate tera noden carma palorp mades tera.
+            </p>
+          </div>
+        </div>
+      </div>
 
-    <section  id="about" class="about padding_in_btw margin_bottom">
+    </div>
+  </section>
+
+
+    <section  id="about" class="about margin_bottom">
       <div class="container">
 
         <div class="row">
@@ -416,34 +444,6 @@
           </div>
         </div>
 
-      </div>
-    </section>
-
-    <section class="about alt_bgcolor">
-      <div class="container">
-        <div class="row d-flex flex-row-reverse">
-          <div class="col-lg-6 img_padding_mv" data-aos="zoom-in">
-            <img src="./images/ourvision_aboutpage_1.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-6 d-flex flex-column justify-contents-center padding_rl" data-aos="fade-left">
-            <div class="content pt-4 pt-lg-0">
-              <h3>Our vision</h3>
-              <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
-              </p>
-              <ul>
-                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperd</li>
-              </ul>
-              <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate tera noden carma palorp mades tera.
-              </p>
-            </div>
-          </div>
-        </div>
-  
       </div>
     </section>
 
