--- a/index.html
+++ b/index.html
@@ -293,10 +293,11 @@
         <source src="./videos/videoplayback.mp4" type="video/mp4">
       </video>
 
-      <p class="u-text u-text-2 mb-5"> In mollis nunc sed id semper risus in hendrerit gravida. Aliquet enim tortor at auctor
+      <p class="u-text u-text-2 mb-5 content"> <strong>In mollis nunc sed id semper risus in hendrerit gravida. Aliquet enim tortor at auctor
         urna nunc id cursus. Risus at ultrices mi tempus imperdiet. Sapien pellentesque habitant morbi tristique
         senectus et netus. Id cursus metus aliquam eleifend mi in. Quis commodo odio aenean sed. Sollicitudin ac orci
-        phasellus egestas tellus. Id velit ut tortor pretium.<br>
+        phasellus egestas tellus. Id velit ut tortor pretium. mperdiet. Sapien pellentesque habitant morbi tristique
+        senectus et netus. Id cursus metus aliquam eleifend mi </strong> <br>
       </p>
 
     </div>
@@ -353,7 +354,8 @@
 
       
     </div>
-    <p class="u-text u-text-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa nobis autem, sunt beatae porro dignissimos voluptatibus debitis aperiam pariatur tempora?</p>
+    <p class="u-text u-text-2"> <strong>In mollis nunc sed id semper risus in hendrerit gravida. Aliquet enim tortor at auctor
+      urna nunc id cursus. Risus at ultrices mi tempus </strong></p>
       <div style="display: flex; justify-content: center; width: 100%;" >
         <a href="index.html#carousel_64ac" data-page-id="2206810918"
         class="u-btn u-border-none u-btn-round u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-palette-1-base u-radius-50 u-btn-1">Read more</a>
