Pics added to industries pages

--- a/Industries.html
+++ b/Industries.html
@@ -272,6 +272,7 @@
           <div class="u-container-style u-tab-active u-tab-pane" id="tab-081f" role="tabpanel"
             aria-labelledby="link-tab-081f">
             <div class="u-container-layout u-container-layout-1">
+              <img class="industries_images" src="./images/retail_industries-2.jpg" alt="">
               <h4 class="u-text u-text-default u-text-1">Description</h4>
               <div class="u-align-left u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
               <p class="u-text u-text-default u-text-2">We develop partnerships with leading companies and organizations
@@ -287,6 +288,7 @@
           </div>
           <div class="u-container-style u-tab-pane" id="tab-4d57" role="tabpanel" aria-labelledby="link-tab-4d57">
             <div class="u-container-layout u-container-layout-2">
+              <img class="industries_images" src="./images/healthcare_industries_2.png" alt="">
               <h4 class="u-text u-text-default u-text-5">The Basics of Shipping</h4>
               <p class="u-text u-text-default u-text-6">In this article we will cover the BASICS of Who is Who and what
                 role they play in the South African Container Shipping industry..</p>
@@ -298,7 +300,9 @@
             </div>
           </div>
           <div class="u-container-style u-tab-pane" id="tab-3a42" role="tabpanel" aria-labelledby="link-tab-3a42">
-            <div class="u-container-layout u-container-layout-3"><h4 class="u-text u-text-default u-text-1">Description</h4>
+            <div class="u-container-layout u-container-layout-3">
+              <img class="industries_images" src="./images/realestate_industries_2.webp" alt="">
+              <h4 class="u-text u-text-default u-text-1">Description</h4>
               <div class="u-align-left u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
               <p class="u-text u-text-default u-text-2">We develop partnerships with leading companies and organizations
                 from around the globe to complement our expertise and deliver breakthrough results.&nbsp;We have
@@ -312,7 +316,9 @@
             </div>
           </div>
           <div class="u-container-style u-tab-pane" id="link-tab-d7e7" role="tabpanel" aria-labelledby="tab-d7e7">
-            <div class="u-container-layout u-container-layout-4"><h4 class="u-text u-text-default u-text-5">The Basics of Shipping</h4>
+            <div class="u-container-layout u-container-layout-4">
+              <img class="industries_images" src="./images/financial_industries_2.jpg" alt="">
+              <h4 class="u-text u-text-default u-text-5">The Basics of Shipping</h4>
               <p class="u-text u-text-default u-text-6">In this article we will cover the BASICS of Who is Who and what
                 role they play in the South African Container Shipping industry..</p>
               <ul class="u-text u-text-default u-text-7">
@@ -322,7 +328,9 @@
               </ul></div>
           </div>
           <div class="u-container-style u-tab-pane" id="link-tab-6219" role="tabpanel" aria-labelledby="tab-6219">
-            <div class="u-container-layout u-container-layout-5"><h4 class="u-text u-text-default u-text-1">Description</h4>
+            <div class="u-container-layout u-container-layout-5">
+              <img class="industries_images" src="./images/logistics_industries_2.jpg" alt="">
+              <h4 class="u-text u-text-default u-text-1">Description</h4>
               <div class="u-align-left u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div><p class="u-text u-text-default u-text-2">We develop partnerships with leading companies and organizations
               from around the globe to complement our expertise and deliver breakthrough results.&nbsp;We have
               long-lasting partnerships and affiliations with like-minded organizations and leaders share our
@@ -334,7 +342,9 @@
               Dramatically engage top-line web services vis-a-vis cutting-edge deliverables.</p></div>
           </div>
           <div class="u-container-style u-tab-pane" id="tab-f599" role="tabpanel" aria-labelledby="link-tab-f599">
-            <div class="u-container-layout u-container-layout-6"><h4 class="u-text u-text-default u-text-5">The Basics of Shipping</h4>
+            <div class="u-container-layout u-container-layout-6">
+              <img class="industries_images" src="./images/manufacturing_industries_2.jpg" alt="">
+              <h4 class="u-text u-text-default u-text-5">The Basics of Shipping</h4>
               <p class="u-text u-text-default u-text-6">In this article we will cover the BASICS of Who is Who and what
                 role they play in the South African Container Shipping industry..</p>
               <ul class="u-text u-text-default u-text-7">
